# moveit_benchmark_suite

moveit_benchmark_suite/: CMakeLists.txt  package.xml
moveit_benchmark_suite/example/: apc_collision_objects.yaml  collision_objects.yaml  goal_constraints.yaml  load_benchmark.launch  panda_arm_start_state.yaml
moveit_benchmark_suite/include/moveit/benchmark_suite/: benchmark_parameters.h
moveit_benchmark_suite/src/: benchmark_parameters.cpp  load_benchmark.cpp
tools/: CMakeLists.txt
